dchange homepage name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ashmuradyann.github.io/kavkaz-studio",
+  "homepage": "https://kavkaz-studio.github.io/",
   "name": "kavkaz-studio",
   "version": "0.1.0",
   "private": true,
